tests/data/placebo/test_network_acl_s3_missing/ec2.DeleteNetworkAclEntry_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "ee0d7b3f-6ff3-4868-9f31-a0df65fb0908", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Sun, 26 Feb 2017 17:18:07 GMT"
            }
        }
    }
}
