tests/data/placebo/test_network_acl_s3_missing/ec2.DeleteVpc_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "54b46ceb-6752-41e5-b0a8-26cdc000532e", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Sun, 26 Feb 2017 17:18:09 GMT"
            }
        }
    }
}
