tests/data/placebo/test_network_acl_s3_missing/ec2.DescribeNetworkAcls_2.json
{
  "status_code": 200,
  "data": {
    "NetworkAcls": [
      {
        "Associations": [],
        "NetworkAclId": "acl-6c9db915",
        "VpcId": "vpc-cc5ae4b5",
        "Tags": [],
        "Entries": [
          {
            "RuleNumber": 32767,
            "Protocol": "-1",
            "Egress": true,
            "CidrBlock": "0.0.0.0/0",
            "RuleAction": "deny"
          },
          {
            "RuleNumber": 100,
            "Protocol": "-1",
            "Egress": false,
            "CidrBlock": "0.0.0.0/0",
            "RuleAction": "allow"
          },
          {
            "RuleNumber": 32767,
            "Protocol": "-1",
            "Egress": false,
            "CidrBlock": "0.0.0.0/0",
            "RuleAction": "deny"
          }
        ],
        "IsDefault": true
      }
    ],
    "ResponseMetadata": {}
  }
}
